# samples

./: README.md
_general/: jzon.h  msg_proc_def.h  thread_pool.h
ame2/: ame2.sln
ame2/p1/: defs.h  jzon.cpp  p1.cpp  p1.vcxproj  p1.vcxproj.filters  shared_memory.h  shared_picture.h  spinlock.h
ame2/p2/: p2.cpp  p2.vcxproj  p2.vcxproj.filters
rtk/: CMakeLists.txt  jobs_pool.h  main.cpp  server.h  test_client.cpp
true_conf/: CMakeLists.txt  true_conf.cpp
